--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <section id="routes">
       <h2>Choose from these different themes: </h2>
       <div class="container">
-        <p class="one">Nature Enthusiast</p>
-        <p class="two">Hike Master</p>
-        <p class="two">Peace Warrior</p>
-        <p class="two">Thrill Seeker</p>
+        <p class="nav-items">Nature Enthusiast</p>
+        <p class="nav-items">Hike Master</p>
+        <p class="nav-items">Peace Warrior</p>
+        <p class="nav-items">Thrill Seeker</p>
         
       </div>
     </section>
 
     <section id="interactivewalk">  
-    <img src="https://i.pinimg.com/originals/25/7c/a5/257ca595dd14fb0f43ee592134af200f.gif">
+    <img class="walkingGuy" src="https://i.pinimg.com/originals/25/7c/a5/257ca595dd14fb0f43ee592134af200f.gif">
     </section>
 
     <section id="contact">
