fixed mouse over

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <section id="interactivewalk">  
-    <img class="walkingGuy" src="https://i.pinimg.com/originals/25/7c/a5/257ca595dd14fb0f43ee592134af200f.gif">
+    <img id="walkingGuy" src="https://i.pinimg.com/originals/25/7c/a5/257ca595dd14fb0f43ee592134af200f.gif">
     </section>
 
     <section id="contact">
